# light-terminal

./: .gitignore  CMakeLists.txt  README.md  config.h.in
inc/: light-terminal.hpp
src/: light-terminal.cpp
test/: test.cpp
